# zkTLS-Mina-Oracle

./: .env.example  .eslintrc.cjs  .gitignore  README.md  build-mina-fungible-token.js  config.json  index-mina.js  index.js  package-lock.json  package.json  public_key_k256.pem  tsconfig.json  zkonrequest.js
src/: .gitignore  ByteArray.ts  String.ts  UInt8.ts  ZkonRequestCoordinator.ts  ZkonRequests.ts  ZkonResponse.ts  ZkonResponseCoordinator.ts  config.ts  index.ts  proveableECDSA.ts  utils.ts  zkProgram.ts  zkProgramECDSA.ts
verifier/: .gitignore  Cargo.toml  index.node
verifier/src/: lib.rs
